<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Contact Vibrate</string>
    <string name="tittle">SMS Custom Vibration</string>
    
    <string name="main_button_asignar">Set vibration for contact</string>
    <string name="main_button_agregar">Create new vibration</string>
    <string name="vibrations_list">Saved vibrations</string>
    <string name="master_vibration">Master vibration</string>
    <string name="list_contacts">List contacts with vibrations</string>
    
    
    <string name="hello">hello:)</string>
    
    <!-- Dialog -->
	<string name = "dialog_selection">What do you want to do?</string>  
	<string name = "select_vibration">"Select vibration"</string>
	<string name = "custom_vibration">"Create new vibration"</string>
	<string name = "custom_vibration_morse">"Custom morse vibration"</string>
	<string name = "name_morse">"Contact name in morse"</string>
	
	<!-- Button -->
	<string name = "dialog_str_morse_button">Assign</string>  
	
	<!-- Miscelanea -->
	<string name = "first_time_toast">This is the first run. Welcome and enjoy !</string>
	<string name = "smsfrom">SMS from </string>
	<string name = "vib_add_ok">Vibration successfully set</string>
	<string name = "dialog_str_morse_tittle">Text to morse</string>
	<string name = "dialog_str_morse_text">Type text to convert to morse</string>
	<string name = "in_morse">In morse</string>
	<string name = "vibration_saved_title">Enter vibration name</string>
	<string name = "vibration_saved">Your vibration was saved and set for the contact</string>
	<string name = "enter_name">Please, enter the name for your new vibration:</string>
	<string name = "write_something">Please, write something !</string>
	<string name = "noContacts">No contacts found</string>
	<string name = "noPresets">No presets found</string>
	<string name = "hold_long">Click and hold an item to edit its options.</string>
	<string name = "preset_exist_overwrite_question">This preset already exists, do you want to overwrite it ?</string>
	<string name = "preset_clear_question">This will clean your list, do you want to continue ?</string>
	<string name = "master_info">The master vibration will be called when no other is selected for a contact.</string>
	<string name = "reset_to_default">Reset to default</string>
	<string name = "select_from_list">Select from list</string>
	<string name = "remove_vib">Remove vibration</string>
	<string name = "vibrate_on_call">Vibrate when a call is received </string>
	<string name = "vibrate_on_sms">Vibrate when a SMS is received</string>
	<string name = "vibrate_system">Disable other system vibrations</string>
	<string name = "sd_ro">"Your external storage is mounted read only, please re-mount it RW mode."</string>
	<string name = "no_sd">"No SD card found, please install one."</string>
	<string name = "ok">OK</string>
		

	
	
	
	
	<!-- Comun -->
	<string name = "yes">Yes</string>
	<string name = "no">No</string>
	<string name = "options">Options</string>
	<string name = "cancel">Cancel</string>
    <string name = "reset">Reset</string>
    <string name = "save">Save</string>
    <string name = "test">Test</string>
    <string name = "rename">Rename</string>
    <string name = "delete">Delete</string>
    <string name = "error">Error</string>
    <string name = "new_common">New</string>
    <string name = "refresh">Refresh</string>
    <string name = "information">Information</string>
    <string name = "clear">Clear</string>
    <string name = "loading">Loading...</string>
    <string name = "removed">Removed</string>
    <string name = "settings">Settings</string>
    <string name = "exit">Exit</string>
    <string name = "credits">Credits</string>
	
	
	<!-- Errores -->
	<string name = "error_missing_name_tomorse">You must write something !</string>
	<string name = "error_guardar_preset">Error saving. We tried to save it anyway !</string>
	
    
    
    <!-- Crear vibracion -->
    <string name="taphere">Tap here to set your vibration:</string>
    <string name="typehere">Type here to set your vibration:</string>
    <string name="delay">Delay:</string>
    <string name="speed">Speed:</string>

    
    
</resources>



