<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	style="@android:style/Theme.NoTitleBar"
	
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    >
   	<LinearLayout
   		android:orientation="vertical"
   		android:layout_width="fill_parent"
   		android:layout_height="fill_parent">
		<LinearLayout
		   	android:layout_width="fill_parent" 
		   	android:layout_height="fill_parent"
		   	android:gravity="center"
		   	android:layout_margin="25dip"
		   	android:orientation="vertical"
		   	>
		   	<Button
		   		android:layout_width="fill_parent" 
		   		android:layout_height="wrap_content"
		   		android:id="@+id/main_button_asignar"
		   		android:gravity="center"
		   		android:text="@string/main_button_asignar"
		    	android:textStyle="bold"
		    	android:textColor="@color/black"
		    	android:textSize="20dip"
		    	android:onClick="clickAsignar"
		    	></Button>
		   	<Button
		   		android:layout_width="fill_parent" 
		   		android:layout_height="wrap_content"
		   		android:id="@+id/main_button_agregar"
		    	android:gravity="center"
		   		android:text="@string/main_button_agregar"
		    	android:textStyle="bold"
		    	android:textColor="@color/black"
		    	android:textSize="20dip"
		    	android:onClick="clickAgregar"
		    	></Button>
		   	<Button
		   		android:layout_width="fill_parent" 
		   		android:layout_height="wrap_content"
		   		android:id="@+id/main_button_preset"
		    	android:gravity="center"
		   		android:text="@string/vibrations_list"
		    	android:textStyle="bold"
		    	android:textColor="@color/black"
		    	android:textSize="20dip"
		    	android:onClick="clickPresets"
		    	></Button>
		   	<Button
		   		android:layout_width="fill_parent" 
		   		android:layout_height="wrap_content"
		   		android:id="@+id/main_button_master"
		    	android:gravity="center"
		   		android:text="@string/master_vibration"
		    	android:textStyle="bold"
		    	android:textColor="@color/black"
		    	android:textSize="20dip"
		    	android:onClick="clickMaster"
		    	></Button>
		    <Button
		   		android:layout_width="fill_parent" 
		   		android:layout_height="wrap_content"
		   		android:id="@+id/main_button_list"
		    	android:gravity="center"
		   		android:text="@string/list_contacts"
		    	android:textStyle="bold"
		    	android:textColor="@color/black"
		    	android:textSize="20dip"
		    	android:onClick="clickList"
		    	></Button>
		    	
		    		    
		</LinearLayout> 
	</LinearLayout>

</LinearLayout>
